--- a/web/app/src/Perks/perks.css
+++ b/web/app/src/Perks/perks.css
@@ -1,4 +1,4 @@
 .attack-modifier {
     position: absolute;
-    margin-right: 7em;
+    margin-right: 8em;
 }
